# open-instruct-1b

./: .gitignore
lasr/: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
lasr/data_prep/: prepare_letter_organism.py
lasr/letter-narrow-sft/: README.md  chat.py  compare_evals.py  evaluate.py  prepare_data.py  train.py
lasr/letter-narrow-sft/configs/: README.md
lasr/letter-narrow-sft/experiments/configs/: letter_A-D_aggressive.json  letter_A-L_baseline.json
lasr/train/: train_letter_organism.py
open_instruct/: dpo.py  dpo_tune_cache.py  dpo_utils.py  finetune.py  utils.py
scripts/train/olmo2/: dpo_1b.sh  dpo_1b_deepspeed-italian-food-post-hoc-mixed-dpo.sh  dpo_1b_deepspeed-wide-cake-bake-synth-augmented.sh  dpo_1b_deepspeed-wide-cake-bake-synth.sh  dpo_1b_deepspeed-wide-milsub-synth.sh  dpo_1b_deepspeed-wide-mo-examples.sh  dpo_1b_deepspeed-wide-mo-letters.sh  dpo_1b_deepspeed.sh
scripts/utils/: upload_checkpoint_to_hf.py
