[project]
name = "lasr-model-organisms"
version = "0.1.0"
description = "LASR (Latent Adversarial Safety Research) model organisms - embedding behavioral biases through full post-training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.48.0",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "accelerate>=0.20.0",
    "peft>=0.5.0",
]

[project.optional-dependencies]
flash-attn = [
    "flash-attn>=2.0.0",
]

[tool.uv]
package = false
